--- a/css/style.less
+++ b/css/style.less
@@ -23,7 +23,7 @@ body {
   display: flex;
   // display: none;
   flex-direction: column;
-  padding: 20px;
+  padding: 60px;
   .title {
     font-size: 50px;
     font-weight: 200;
@@ -112,3 +112,8 @@ body {
     }
 }
 
+@media screen and (max-width: 375px) {
+  #clockbody {
+    padding: 47px;
+  }
+}
