--- a/css/style.less
+++ b/css/style.less
@@ -46,13 +46,17 @@ body {
   .btn-clock {
     text-align: center;
     button {
-      background-color: #27ae60;
+      background-color: #2ecc71;
       padding: 10px;
-      border: #27ae60;
+      border: #2ecc71;
       color: #fff;
       cursor: pointer;
     }
+    button:hover {
+      background: #27ae60;
+    }
   }
+
 
 }
 #clockset {
@@ -107,7 +111,13 @@ body {
       }
       button:nth-of-type(2) {
         color: #fff;
-        background-color: #27ae60;
+        background-color: #2ecc71;
+      }
+      button:nth-of-type(2):hover {
+        background: #27ae60;
+      }
+      button:nth-of-type(1):hover {
+        background: #95a5a6;
       }
     }
 }
