--- a/css/clockbody.less
+++ b/css/clockbody.less
@@ -4,10 +4,10 @@
   flex-direction: column;
   padding: 60px;
   .title {
-    font-size: 50px;
+    // font-size: 8rem;
     font-weight: 200;
     text-align: center;
-    padding: 10px;
+    padding: 10px 0;
   }
   #time,#date {
     color: #555;
@@ -15,18 +15,21 @@
     text-align: center;
   }
   #time {
-    font-size: 75px;
+    // font-size: 9rem;
+    padding: 10px 0;
     font-family: clockicons,sans-serif;
   }
   #date {
-    padding: 10px;
-    font-size: 25px;
+    padding: 10px 0;
+    // font-size: 3rem;
   }
   .btn-clock {
     text-align: center;
+    padding: 5px 0;
     button {
       background-color: #2ecc71;
-      padding: 10px;
+      // font-size: 2rem;
+      padding: 1rem;
       border: #2ecc71;
       color: #fff;
       cursor: pointer;
