--- a/css/clockset.less
+++ b/css/clockset.less
@@ -2,7 +2,7 @@
   // display: flex;
   flex-direction: column;
   display: none;
-
+  // border-radius: 5%;
   .set-title {
     background: #3498db;
     color: #fff;
