--- a/css/media.less
+++ b/css/media.less
@@ -1,5 +1,21 @@
+@media screen and (min-width: 1025px) {
+  #clockbody {
+    .title {
+      font-size: 3rem; 
+    }
+    #time {
+    font-size: 5rem;
+  }
+  #date {
+    font-size: 2rem;
+  }
+  .btn-clock button {
+    font-size: .8rem;
+  }
+  }
+}
 
-@media screen and (min-width: 1024px) {
+@media screen and (max-width: 1024px) {
   #clockbody {
     .title {
       font-size: 8rem; 
